--- a/personal-portfolio/src/components/Sidebar.scss
+++ b/personal-portfolio/src/components/Sidebar.scss
@@ -73,10 +73,10 @@ left:-15px;
   }
 }
 
-body {
-  height: 100vh;
-  background: radial-gradient(circle at 94.02% 88.03%, #54a4ff, transparent 100%),radial-gradient(circle at 25.99% 27.79%, #ff94fb, transparent 100%),radial-gradient(circle at 50% 50%, #000000, #000000 100%);
-}
+// body {
+//   height: 100vh;
+//   background: radial-gradient(circle at 94.02% 88.03%, #54a4ff, transparent 100%),radial-gradient(circle at 25.99% 27.79%, #ff94fb, transparent 100%),radial-gradient(circle at 50% 50%, #000000, #000000 100%);
+// }
 
 h1 {
   margin-top: 6rem;
@@ -91,4 +91,7 @@ h1 {
   text-shadow:10px 10px 10px rgba(0,0,0,.3);
 }
 
+ul {
+  list-style-type: none;
+}
 
