--- a/css/Sidebar.css
+++ b/css/Sidebar.css
@@ -1,107 +1,27 @@
-.nav__cont {
-  position: fixed;
-  width: 60px;
-  top: 0;
+.sidebar {
   height: 100vh;
-  z-index: 100;
-  background-color: #202020;
-  overflow: hidden;
-  -webkit-transition: width .3s ease;
-  transition: width .3s ease;
-  cursor: pointer;
-  -webkit-box-shadow: 4px 7px 10px rgba(0, 0, 0, 0.4);
-          box-shadow: 4px 7px 10px rgba(0, 0, 0, 0.4);
+  display: inline-block;
+  background-color: #464749;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 6em;
+  position: fixed;
 }
 
-.nav__cont:hover {
-  width: 200px;
-}
-
-@media screen and (min-width: 600px) {
-  .nav__cont {
-    width: 80px;
-  }
-}
-
-.nav {
+li {
   list-style-type: none;
-  color: white;
-}
-
-.nav:first-child {
-  padding-top: 1.5rem;
-}
-
-.nav__items {
-  padding-bottom: 4rem;
-  font-family: 'roboto';
-}
-
-.nav__items a {
-  position: relative;
-  display: block;
-  top: -35px;
-  padding-left: 25px;
-  padding-right: 15px;
-  -webkit-transition: all .3s ease;
-  transition: all .3s ease;
-  margin-left: 25px;
-  margin-right: 10px;
-  text-decoration: none;
-  color: white;
-  font-family: 'roboto';
-  font-weight: 100;
-  font-size: 1.35em;
-}
-
-.nav__items a:after {
-  content: '';
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  border-radius: 2px;
-  background: radial-gradient(circle at 94.02% 88.03%, #54a4ff, transparent 100%);
-  opacity: 0;
-  -webkit-transition: all .5s ease;
-  transition: all .5s ease;
-  z-index: -10;
-}
-
-.nav__items:hover a:after {
-  opacity: 1;
-}
-
-.nav__items svg {
-  width: 26px;
-  height: 26px;
-  position: relative;
-  left: -25px;
-  cursor: pointer;
-}
-
-@media screen and (min-width: 600px) {
-  .nav__items svg {
-    width: 32px;
-    height: 32px;
-    left: -15px;
-  }
-}
-
-h1 {
-  margin-top: 6rem;
-  margin-left: 80px;
-  text-align: center;
-  font-family: 'Roboto';
-  font-weight: 100;
-  font-size: 4rem;
-  text-transform: uppercase;
-  color: white;
-  letter-spacing: 6px;
-  text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
-}
-
-ul {
-  list-style-type: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  color: #f1f1f1;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
