--- a/personal-portfolio/src/components/ProjectItems.scss
+++ b/personal-portfolio/src/components/ProjectItems.scss
@@ -4,13 +4,17 @@
 
 .Project--Card {
   flex-direction: row;
-  margin-right: 2em;
-  padding: 2em 1em;
+  margin-right: 1em;
+  margin-top: 1em;
+
   border-style: solid;
   border-width: 5px;
   border-color: #08FDD8;
   border-radius: 10px;
   background-color: #efefef;
   text-align: center;
-
+  max-width: 20em;
+  padding: 1em;
+  min-width: 20em;
+  min-height: 20em;
 }
