increasing font size for project menu nav links

--- a/personal-portfolio/src/components/ProjectsGrid.scss
+++ b/personal-portfolio/src/components/ProjectsGrid.scss
@@ -1,12 +1,14 @@
 .Projects--Nav {
   display: flex;
   flex-direction: row;
- 
   
 } 
 
 .Projects--Nav--Item {
   color:#08FDD8;
   margin-right: 2em;
+  font-size: 30px;
 }
+
+
 
