adding roboto font

--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -1,6 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+
+
+
 body {
   margin: 0;
   padding-top: 0;
   background-color: #1D1D1D;
   display: flex;
+  font-family: 'Roboto'
 }
