--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -6,7 +6,7 @@
 body {
   margin: 0;
   padding-top: 0;
-  background-color: #1D1D1D;
+  background-color: #121212;
   display: flex;
   font-family: 'Roboto'
 }
