--- a/personal-portfolio/src/components/ProjectItems.scss
+++ b/personal-portfolio/src/components/ProjectItems.scss
@@ -1,15 +1,15 @@
 .Project--Items {
   display: flex;
+  margin-bottom: 2em;
 }
 
 .Project--Card {
   flex-direction: row;
-  margin-right: 1em;
-  margin-top: 1em;
+  margin: 1em;
 
   border-style: solid;
   border-width: 5px;
-  border-color: #08FDD8;
+  // border-color: #FFACFC;
   border-radius: 10px;
   background-color: #efefef;
   text-align: center;
@@ -18,3 +18,13 @@
   min-width: 20em;
   min-height: 20em;
 }
+
+.Item--Main--Image {
+ padding-bottom: 2em;
+ max-width: 100%; 
+
+ &:hover {
+   margin-bottom: 4em;
+ }
+}
+
