--- a/personal-portfolio/src/components/ProjectItems.scss
+++ b/personal-portfolio/src/components/ProjectItems.scss
@@ -6,12 +6,13 @@
 .Project--Card {
   flex-direction: row;
   margin: 1em;
+  color: #BDBDBD;
 
-  border-style: solid;
-  border-width: 5px;
+  // border-style: solid;
+  // border-width: 5px;
   // border-color: #FFACFC;
   border-radius: 10px;
-  background-color: #efefef;
+  background-color: #424242;
   text-align: center;
   max-width: 20em;
   padding: 1em;
@@ -22,9 +23,18 @@
 .Item--Main--Image {
  padding-bottom: 2em;
  max-width: 100%; 
+ border-radius: 10px;
+ border-top: 16px solid #630fe4;
+ max-height: 200px;
 
  &:hover {
-   margin-bottom: 4em;
+   transform: translate(0, -40px);
+   box-shadow: 10px black;
+   transition: .4s ease-in-out;
  }
 }
+
+//------------------------------------------------------
+
+
 
