--- a/personal-portfolio/src/components/ProjectsGrid.scss
+++ b/personal-portfolio/src/components/ProjectsGrid.scss
@@ -5,7 +5,7 @@
 } 
 
 .Projects--Nav--Item {
-  color:#08FDD8;
+  color:#4fd1c5;
   margin-right: 2em;
   font-size: 30px;
   list-style-type: none;
