--- a/css/Sidebar.css
+++ b/css/Sidebar.css
@@ -8,26 +8,37 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   width: 6em;
   position: fixed;
+  margin-top: 0;
 }
 
 .Nav--Container {
   position: absolute;
-  margin: auto;
   list-style-type: none;
-  color: #f1f1f1;
   margin-top: 1em;
   margin-bottom: 1em;
+  margin-bottom: 10em;
 }
 
 .Nav--Item {
+  list-style-type: none;
   margin-bottom: 1em;
   margin-right: 1em;
-  padding-top: 1em;
+  padding-top: 3em;
   padding-bottom: 1em;
+  background-color: #424242;
+  color: #57d9a3;
+}
+
+.Nav--Item:visited {
+  text-decoration: none;
+  color: white;
+}
+
+.Icon {
   color: #08FDD8;
+  font-size: 25px;
 }
