--- a/personal-portfolio/src/components/Home.scss
+++ b/personal-portfolio/src/components/Home.scss
@@ -10,11 +10,13 @@
 
 h1 {
   color: white;
-  font-size: 70px;
+  font-size: 80px;
 }
 
 .home {
-  margin: 30em 20em;
+  // margin: 30em 20em;
+  margin-left: 15em;
+  margin-top: 18em;
   
 }
 
