--- a/personal-portfolio/src/components/ProjectItems.scss
+++ b/personal-portfolio/src/components/ProjectItems.scss
@@ -1,12 +1,13 @@
 .Project--Items {
   display: flex;
   margin-bottom: 2em;
+  margin-top: 2em;
 }
 
 .Project--Card {
   flex-direction: row;
   margin: 1em;
-  color: #BDBDBD;
+  color: #EEE;
 
   // border-style: solid;
   // border-width: 5px;
@@ -14,6 +15,7 @@
   border-radius: 10px;
   background-color: #424242;
   text-align: center;
+  max-height: 30em;
   max-width: 20em;
   padding: 1em;
   min-width: 20em;
@@ -24,14 +26,22 @@
  padding-bottom: 2em;
  max-width: 100%; 
  border-radius: 10px;
+ 
  border-top: 16px solid #630fe4;
- max-height: 200px;
+
+
 
  &:hover {
-   transform: translate(0, -40px);
+   transform: translate(0, -50px);
    box-shadow: 10px black;
    transition: .4s ease-in-out;
  }
+}
+
+
+.Card--Text {
+  padding: 0;
+  
 }
 
 //------------------------------------------------------
