--- a/personal-portfolio/src/components/Home.scss
+++ b/personal-portfolio/src/components/Home.scss
@@ -16,7 +16,8 @@ h1 {
 .home {
   // margin: 30em 20em;
   margin-left: 15em;
-  margin-top: 18em;
+  // margin-top: 18em;
+  padding-top: 18em;
   
 }
 
