--- a/personal-portfolio/src/components/ProjectItems.scss
+++ b/personal-portfolio/src/components/ProjectItems.scss
@@ -1,3 +1,11 @@
+@media all and (max-width: 768px) {
+  .Project--Items {
+    background-color: red !important;
+    
+  }
+}
+
+
 .Project--Items {
   display: flex;
   margin-bottom: 2em;
@@ -6,21 +14,14 @@
 
 .Project--Card {
   flex-direction: column;
-  
   margin: 1em;
   color: #EEE;
-
-  // border-style: solid;
-  // border-width: 5px;
-  // border-color: #FFACFC;
   border-radius: 10px;
   background-color: #424242;
   text-align: flex-starte;
   max-height: 30em;
   max-width: 20em;
   padding: 1em;
-  // min-width: 20em;
-  // min-height: 20em;
   width: 'max-content';
 
   // &:hover {
