removing white space

--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -9,5 +9,6 @@ body {
   /* background-color: #303030; */
   background-color: #212121;
   display: flex;
-  font-family: 'Roboto'
+  font-family: 'Roboto';
+  
 }
