--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-  padding-top: 0;
+  padding: 0;
   /* background-color: #303030; */
   background-color: #212121;
   display: flex;
