--- a/personal-portfolio/src/components/ProjectItems.scss
+++ b/personal-portfolio/src/components/ProjectItems.scss
@@ -6,9 +6,11 @@
 
 
 .Project--Items {
-  display: grid;
-  margin-bottom: 2em;
+  // display: grid;
+  // margin-bottom: 2em;
   // margin-top: 1em;
+  // justify-content: center;
+  
 }
 
 .Project--Card {
@@ -17,11 +19,12 @@
   color: #EEE;
   border-radius: 10px;
   background-color: #424242;
-  text-align: flex-starte;
+  text-align: flex-start;
   max-height: 30em;
   max-width: 20em;
   padding: 1em;
   width: 'max-content';
+  
 
   // &:hover {
   //   transform: translate(0, -40px);
