--- a/personal-portfolio/src/components/Projects.scss
+++ b/personal-portfolio/src/components/Projects.scss
@@ -1,12 +1,16 @@
 #projects {
-  margin-left: 16em;
+  // margin-left: 15em;
   display: flex;
   flex-direction: column;
   width: 100vw;
-
+  height: 100vh;
   
+
+
 }
 
 #project--page--heading {
   color:#EEE;
+  text-align: center;
+  
 }
