--- a/personal-portfolio/src/components/ProjectItems.scss
+++ b/personal-portfolio/src/components/ProjectItems.scss
@@ -14,16 +14,16 @@
 }
 
 .Project--Card {
-  flex-direction: column;
-  margin: 1em;
-  color: #EEE;
-  border-radius: 10px;
-  background-color: #424242;
-  text-align: flex-start;
-  max-height: 30em;
-  max-width: 20em;
-  padding: 1em;
-  width: 'max-content';
+  // flex-direction: column;
+  // margin: 1em;
+  // color: #EEE;
+  // border-radius: 10px;
+  // background-color: #424242;
+  // text-align: flex-start;
+  // max-height: 30em;
+  // max-width: 20em;
+  // padding: 1em;
+  // width: 'max-content';
   
 
   // &:hover {
@@ -34,10 +34,8 @@
 }
 
 .Item--Main--Image {
- 
  max-width: 100%; 
  border-radius: 10px;
- 
  border-top: 16px solid #630fe4;
 
 
@@ -50,10 +48,33 @@
 }
 
 
-.Card--Text {
-  padding: 0;
+#Card--Overlay {
+  opacity: 0;
+  padding: 1em;
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 999;
+
+  
+
+
+  &:hover {
+    opacity: 0.7;
+    transition: 0.2s ease;
+    color: black;
+    background-Color: #EEE;
+    backdrop-filter: 'blur(20px)'
+
+    
+
+  }
   
 }
+
+
+
 
 
 //------ Modal Buttons ------- >
