--- a/personal-portfolio/src/components/ProjectItems.scss
+++ b/personal-portfolio/src/components/ProjectItems.scss
@@ -52,20 +52,20 @@
   opacity: 0;
   padding: 1em;
   border-radius: 10px;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: 999;
 
-  
+  text-align: center;
+  margin: -1000px;
+  padding: 1000px;
 
 
   &:hover {
-    opacity: 0.7;
+    opacity: 0.9;
     transition: 0.2s ease;
-    color: black;
-    background-Color: #EEE;
+    color: white;
+    background-Color: #212121;
     backdrop-filter: 'blur(20px)'
+
+    
 
     
 
