--- a/personal-portfolio/src/components/ProjectItems.scss
+++ b/personal-portfolio/src/components/ProjectItems.scss
@@ -1,11 +1,3 @@
-@media all and (max-width: 768px) {
-  // .Project--Items {
-  //   background-color: red !important;
-  // }
-}
-
-
-
 
 .Item--Main--Image {
  max-width: 100%; 
@@ -47,11 +39,31 @@
 
 //------ Modal Buttons ------- >
 
-#Modal--Main {
-  
+.Modal--Buttons {
+  display: inline-block;
+
+  @media only screen 
+    and (device-width : 375px) 
+    and (device-height : 667px) 
+    and (-webkit-device-pixel-ratio : 2) { 
+      display: flex;
+    }
+
+    @media only screen 
+    and (device-width : 375px) 
+    and (device-height : 812px) 
+    and (-webkit-device-pixel-ratio : 3) {
+      display: flex;
+    }
+
+    @media only screen 
+    and (device-width : 360px) 
+    and (device-height : 640px) 
+    and (-webkit-device-pixel-ratio : 3) {
+      display: flex;
+    }
+
 }
-
-
 
 #View--More--Button {
   border-color: #08FDD8;
@@ -75,6 +87,13 @@
   color: black;
   background-color: #08FDD8;
   font-size: 14px;
+
+  @media only screen 
+  and (device-width : 375px) 
+  and (device-height : 812px) 
+  and (-webkit-device-pixel-ratio : 3) { 
+    display: inline-block !important;
+  }
 }
 
 .Cancel--Preview--Button {
@@ -85,17 +104,29 @@
   background-color: red;
   font-size: 14px;
   margin-left: 2em;
+
+  @media only screen 
+    and (device-width : 375px) 
+    and (device-height : 812px) 
+    and (-webkit-device-pixel-ratio : 3) { 
+      display: inline-block !important;
+      margin-left: 0;
+      margin-top: 1em;
+    }
   
+  @media screen and (max-width: 750px) {
+    margin-left: 1em;
+    margin-top: 1em;
+  }
 }
 
 //-------------Modal Elements Styling ---------------------- >
 
 .Modal--Main--Image {
   max-height: 300px;
-  
 }
 
-.Modal--Text {
+#Modal--Text {
   text-align: left;
   max-width: 40em;
 }
