--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300&display=swap');
 
 body {
   margin: 0;
@@ -6,6 +7,6 @@ body {
   /* background-color: #303030; */
   background-color: #212121;
   display: flex;
-  font-family: 'Roboto';
+  font-family: 'Raleway', sans-serif;
   height: 100%;
 }
