making spacing changes

--- a/personal-portfolio/src/components/Home.scss
+++ b/personal-portfolio/src/components/Home.scss
@@ -1,12 +1,13 @@
 // scss variable(s)
 @mixin home--button {
-  margin-top: 15em;
+  margin-top: 2em;
   border-color: #08FDD8;
   padding: 2em 5em;
   border-radius: 10px;
   color: #08FDD8;
   background-color: #1D1D1D;
   font-size: 13px;
+  cursor: pointer;
 
 /* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
 
@@ -50,7 +51,6 @@
     and (-webkit-min-device-pixel-ratio: 3) { 
       margin-top: 14em;
       font-size: 13px;
-
   }
 }
 
@@ -63,10 +63,10 @@
 .home {
   // // margin: 30em 20em;
   // margin-left: 14em;
-  // margin-top: 16em;
+  margin-top: 6em;
   // padding-top: 18em;
   width: 100vw;
-  height: 100%;
+  height: 1000px;
   
   // border-bottom: 3px solid #01bf71
   
@@ -101,3 +101,5 @@ h1 {
 //   @include home--button();
 //   margin-left: 6em;
 // }
+
+// 
