--- a/personal-portfolio/src/components/Projects.scss
+++ b/personal-portfolio/src/components/Projects.scss
@@ -3,13 +3,17 @@
   display: flex;
   flex-direction: column;
   width: 100vw;
-  height: 1000px;
+  // height: 1000px;
+  // height: 101vh;
+  background-color: #eee;
+  
+  
   
 
 }
 
 #project--page--heading {
-  color:#EEE;
+  color:black;
   text-align: center;
   
 }
