--- a/personal-portfolio/src/components/Home.scss
+++ b/personal-portfolio/src/components/Home.scss
@@ -3,7 +3,7 @@
   margin-top: 2em;
   border-color: #08FDD8;
   padding: 2em 5em;
-  border-radius: 10px;
+  border-radius: 4px;
   color: #08FDD8;
   background-color: #1D1D1D;
   font-size: 13px;
@@ -66,7 +66,8 @@
   margin-top: 6em;
   // padding-top: 18em;
   width: 100vw;
-  height: 1000px;
+  // height: 900px;
+  height: 101vh;
   
   // border-bottom: 3px solid #01bf71
   
