adding further responsive styles

--- a/personal-portfolio/src/components/About.scss
+++ b/personal-portfolio/src/components/About.scss
@@ -65,6 +65,7 @@
   font-family: 'Raleway', sans-serif;
   display: block;
   height: 101vh;  
+  
   text-align: left;
   cursor: none !important;
   overflow: hidden;
@@ -124,6 +125,7 @@
   background-color: rgb(33, 33, 33, 0.95);
   width: 60em;
   height: 101vh;
+  // margin: auto;
   overflow: hidden;
   border-radius: 4px;
   display: block;
@@ -131,15 +133,14 @@
   z-index: 5;
   pointer-events: none;
 
-  
 }
 
 .Left--Main {
-  max-width: 50em;
   height: 900px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  
   
 
      /* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
@@ -149,10 +150,7 @@
   and (min-device-width: 320px) 
   and (max-device-width: 568px)
   and (-webkit-min-device-pixel-ratio: 2) {
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    
+
   }
 
 /* ----------- iPhone 6, 6S, 7 and 8 ----------- */
@@ -160,13 +158,12 @@
   /* Portrait and Landscape */
   @media only screen 
   and (min-device-width: 375px) 
-  and (max-device-width: 667px) 
-  and (-webkit-min-device-pixel-ratio: 2) { 
-    padding-left: 10px;
-    padding-right: 10px;
-    display: flex;
-    flex-direction: column;
-
+  // and (max-device-width: 667px) 
+  // and (-webkit-min-device-pixel-ratio: 2) 
+  { 
+    padding-left: 20px;
+    padding-right: 20px;
+    width: 20em
   }
 
 /* ----------- iPhone 6+, 7+ and 8+ ----------- */
@@ -194,13 +191,24 @@
       display: flex;
       flex-direction: column;
   }
+
+  @media only screen and (min-width: 768px) {
+    width: 40em;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2em;
+    justify-content: space-between
+    
+
+    // font-size: 40px
+
+  }
+
 }
 
-@media all and (max-width: 768px) {
-  h1 {
-    // font-size: 40px !important;
-  }
-}
+
+
+
 
   
 
@@ -214,15 +222,14 @@
 
   /* Portrait and Landscape */
   @media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 568px)
-  and (-webkit-min-device-pixel-ratio: 2) {
-    display: inline-block;
-    margin-top: 0;
+  and (min-device-width: 600px) 
+   {
+    // display: inline-block;
+    // margin-top: 0;
 
-    &.Contact--Heading {
-      font-size: 5px;
-    }
+    // &.Contact--Heading {
+    //   font-size: 10px;
+    // }
 
     
   }
@@ -231,7 +238,7 @@
 
   /* Portrait and Landscape */
   @media only screen 
-  and (min-device-width: 375px) 
+  and (min-device-width: 600px) 
   and (max-device-width: 667px) 
   and (-webkit-min-device-pixel-ratio: 2) { 
     padding-left: 10px;
@@ -262,9 +269,9 @@
 }
 
 .View--Resume--Button {
-  
+  text-align: center;
+
   border-color: #08FDD8;
-  padding: 2em 4em;
   border-radius: 4px;
   color: black;
   background-color: #08FDD8;
@@ -278,10 +285,9 @@
   /* Portrait and Landscape */
   @media only screen 
   and (min-device-width: 320px) 
-  and (max-device-width: 568px)
-  and (-webkit-min-device-pixel-ratio: 2) {
+  {
     border-color: #08FDD8;
-    padding: 10px 5px;
+    padding: 4px 5px;
     border-radius: 4px;
     color: black;
     background-color: #08FDD8;
@@ -297,11 +303,8 @@
 
   /* Portrait and Landscape */
   @media only screen 
-  and (min-device-width: 375px) 
-  and (max-device-width: 667px) 
-  and (-webkit-min-device-pixel-ratio: 2) { 
-    top: 20px !important;
-    font-size: 20px;
+  and (min-device-width: 600px) 
+  { 
 
   }
 
@@ -326,13 +329,15 @@
       margin-top: 14em;
       font-size: 13px;
   }
+  @media only screen and (min-width: 768px) {
+  padding: 2em 2em;
+
+}
 }
 
-@media all and (max-width: 768px) {
-  h1 {
-    font-size: 40px !important;
-  }
-}
+
+
+
 
 
 
@@ -357,10 +362,17 @@
 
   /* Portrait and Landscape */
   @media only screen 
-  and (min-device-width: 375px) 
-  and (max-device-width: 667px) 
-  and (-webkit-min-device-pixel-ratio: 2) { 
-    font-size: 20px;
+  and (min-device-width: 600px) 
+  
+   { 
+    h2 {
+      font-size: 18px;
+      text-decoration: underline;
+      padding-bottom: 2px;
+      }
+    p {
+      font-size: 15px;
+    }
   }
 
 /* ----------- iPhone 6+, 7+ and 8+ ----------- */
@@ -380,17 +392,13 @@
     and (min-device-width: 375px) 
     and (max-device-width: 812px) 
     and (-webkit-min-device-pixel-ratio: 3) { 
-      // margin-top: 14em;
-      // font-size: 13px;
   }
 
 }
 
 
 .Languages {
-  // margin-top: 6em;
   color: white;
-  
 
          /* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
 
@@ -399,8 +407,8 @@
   and (min-device-width: 320px) 
   and (max-device-width: 568px)
   and (-webkit-min-device-pixel-ratio: 2) {
-    max-width: 300px;
-    margin-top: 10px;
+    // max-width: 300px;
+    // margin-top: 10px;
 
     h2 {
       font-size: 20px;
@@ -416,11 +424,8 @@
 
   /* Portrait and Landscape */
   @media only screen 
-  and (min-device-width: 375px) 
-  and (max-device-width: 667px) 
-  and (-webkit-min-device-pixel-ratio: 2) { 
-    padding-left: 10px;
-    margin-top: 2em;
+  and (min-device-width: 600px)  { 
+
 
   }
 
@@ -431,7 +436,7 @@
   and (min-device-width: 414px) 
   and (max-device-width: 736px) 
   and (-webkit-min-device-pixel-ratio: 3) { 
-    margin-top: 2em;
+
   }
 
   /* ----------- iPhone X ----------- */
@@ -468,8 +473,8 @@
   and (min-device-width: 320px) 
   and (max-device-width: 568px)
   and (-webkit-min-device-pixel-ratio: 2) {
-    max-width: 300px;
-    // padding: 20px
+    
+    
 
     h1 {
       font-size: 2em !important;
@@ -499,7 +504,8 @@
   // and (max-device-width: 667px) 
   // and (-webkit-min-device-pixel-ratio: 2)
    { 
-  padding-left: 0;
+
+    
 
   }
 
@@ -524,4 +530,26 @@
       // font-size: 13px;
   }
 
-}
+    @media only screen and (min-width: 768px) {
+
+    
+    h1 {
+      font-size: 4em !important;
+    }
+  
+    h2 {
+  
+    }
+  
+    p {
+      color: white;
+      font-size: 24px !important;
+    }
+
+    a {
+      color: white
+    }    
+    
+  }
+
+  }
